sharing imgs fix

--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@ input {
       <div class="container">
           <ul class="nav navbar-left pull-left">
             <li class="pull-left"><a href="https://www.facebook.com/TexasFreedomNetwork" target="_blank">
-              <img src="images/facebook-b.gif" alt="Texas Freedom Network on Facebook" class="img-responsive"></a></li>
+              <img src="images/Facebook-b.gif" alt="Texas Freedom Network on Facebook" class="img-responsive"></a></li>
             <li class="pull-left"><a href="https://twitter.com/tfn" target="_blank">
-              <img src="images/twitter-b.gif" alt="Texas Freedom Network on Twitter" class="img-responsive"></a></li>
+              <img src="images/Twitter-b.gif" alt="Texas Freedom Network on Twitter" class="img-responsive"></a></li>
             <li class="pull-left" ><a href="http://instagram.com/txfreedomnetwork" target="_blank">
-              <img src="images/instagram-b.gif" alt="Texas Freedom Network on Instagram" class="img-responsive"></a></li>
+              <img src="images/Instagram-b.gif" alt="Texas Freedom Network on Instagram" class="img-responsive"></a></li>
           </ul>
           <ul class="nav navbar-right pull-right">
             <li class="img-responsive"><a href="#" target="_blank"><img src="images/Donate2.gif" alt="Donate to Texas Freedom Network" class="img-responsive"></a></li>
