--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@ input {
     </nav>
 
     <div class="container-fluid">
-      <div class="row" style="margin-top: -75px;">
-        <a name="homepetition"></a>  <div class="col-md-12 col-sm-12">
+      <div class="row" style="margin-top: -65px;">
+        <a name="homepetition"></a>  <div class="col-md-12 col-sm-12 col-xs-12">
           <img src="images/TFN-TexasDELETE-logo-dividers.gif" alt="Those who don't know history are destined to delete it" width="700" class="center-block img-responsive">
         </div>
       </div>
 
       <div class="row">
-        <div class="col-md-6 col-md-offset-3">
+        <div class="col-xs-12 col-md-6 col-md-offset-3">
           <h3 class="text-center">Sign the <span style="color: red;">petition</span>.</h3>
 
         </div>
@@ -107,7 +107,7 @@ input {
 
       <div class="row">
 
-        <div class="col-md-4 col-md-offset-2">
+        <div class="col-xs-12 col-md-4 col-md-offset-2">
 
           <div>
          <p></p>
