--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ input {
               <img src="images/Instagram-b.gif" alt="Texas Freedom Network on Instagram" class="img-responsive"></a></li>
           </ul>
           <ul class="nav navbar-right pull-right">
-            <li class="img-responsive"><a href="#" target="_blank"><img src="images/Donate2.gif" alt="Donate to Texas Freedom Network" class="img-responsive"></a></li>
+            <li class="pull-right img-responsive"><a href="#" target="_blank"><img src="images/Donate2.gif" alt="Donate to Texas Freedom Network" class="img-responsive"></a></li>
           </ul>
       </div>
     </nav>
