--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ input {
       </div>
 
       <div class="row">
-        <div class="col-xs-12 col-md-6 col-md-offset-3">
+        <div class="col-xs-12 col-sm-12 col-md-6 col-md-offset-3">
           <h3 class="text-center">Sign the <span style="color: red;">petition</span>.</h3>
 
         </div>
@@ -107,7 +107,7 @@ input {
 
       <div class="row">
 
-        <div class="col-xs-12 col-md-4 col-md-offset-2">
+        <div class="col-xs-12 col-sm-12 col-md-4 col-md-offset-2">
 
           <div>
          <p></p>
