--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@ input {
 
         <div class="col-md-4">
           <p>Texas students need classroom materials that offer an accurate portrayal of history and are free of political agendas. Politicians on the board must stop trying to undermine the work of scholars and mainstream historians. They should approve social studies textbooks that are based on sound scholarship.</p>
-           <p><br /><a href="#more"><img src="images/LearnMore.png" class="img-responsive center-block" width="200"></a></p>
+           <p><br /><a href="#more"><img src="images/LearnMore.png" class="img-responsive center-block" width="200"></a>
+           <a href="http://www.tfn.org/" target="_blank"><img src="images/tfn-logo.png" width="50" style="position: relative; bottom: 5px; right: 5px; "></a></p>
        </div>
 
      </div>
@@ -160,7 +161,7 @@ The process of approving the new books is already underway and will conclude wit
 <p>
 But we can't do this without you and other Texans who believe politics don’t belong in the classroom.</p>
 <p><br /><a href="#homepetition"><img src="images/sign-petition.png" class="img-responsive center-block" width="200"></a>
-<a href="http://www.tfn.org/" target="_blank"><img src="images/tfn-logo.png" width="50" style="position: fixed; bottom: 5px; right: 5px; "></a>
+<a href="http://www.tfn.org/" target="_blank"><img src="images/tfn-logo.png" width="50" style="position: relative; bottom: 5px; right: 5px; "></a>
 </p>
         </div><!-- Closing for column div -->
      </div><!-- Closing for row div -->
