--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ input {
 <div id="fullpage">
   <div class="section" id="section0">
     <nav class="navbar" role="navigation">
-      <div class="container">
+      <div class="container-fluid">
           <ul class="nav navbar-left pull-left">
             <li class="pull-left"><a href="https://www.facebook.com/TexasFreedomNetwork" target="_blank">
               <img src="images/Facebook-b.gif" alt="Texas Freedom Network on Facebook" class="img-responsive"></a></li>
