--- a/index.html
+++ b/index.html
@@ -93,8 +93,9 @@ input {
 
     <div class="container-fluid">
       <div class="row" style="margin-top: -65px;">
-        <a name="homepetition"></a>  <div class="col-md-12 col-sm-12 col-xs-12">
-          <img src="images/TFN-TexasDELETE-logo-dividers.gif" alt="Those who don't know history are destined to delete it" width="700" class="center-block img-responsive">
+        <a name="homepetition"></a>
+        <div class="col-md-12 col-sm-12 col-xs-12">
+          <img src="images/TFN-TexasDELETE-logo-dividers.gif" alt="Those who don't know history are destined to delete it" width="100%" class="center-block img-responsive">
         </div>
       </div>
 
