--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ sm-icon {
 
       <div class="row">
 
-        <div class="col-xs-6">
+        <div class="col-xs-6 col-md-3 col-md-offset-2">
 
  <form method="POST" action="http://www.tfn.org/site/Survey" style="" class="text-center center-block">
  <input type="hidden" name="cons_info_component" id="cons_info_component" value="t" />
@@ -108,7 +108,7 @@ sm-icon {
        </div>
      </div>
      <div class="row">
-       <div class="col-xs-6">
+       <div class="col-xs-6 col-md-3 col-md-offset-2">
  <input type="text" name="cons_email" id="cons_email" size="25" maxlength="255" value="Email" onFocus="if(this.value == 'Email') {this.value = '';}" onBlur="if (this.value == '') {this.value = 'Email';}" style="margin-bottom: 3px;" class="center-block" />
        </div>
        <div class="col-xs-6">
