--- a/index.html
+++ b/index.html
@@ -127,8 +127,7 @@ sm-icon {
       <div class="row">
         <div class="col-xs-12">
           <p><br />Texas students need classroom materials that offer an accurate portrayal of history and are free of political agendas. Politicians on the board must stop trying to undermine the work of scholars and mainstream historians. They should approve social studies textbooks that are based on sound scholarship.</p>
-           <p><a href="#more"><img src="images/LearnMore.png" class="img-responsive center-block" width="200"></a>
-           <a href="http://www.tfn.org/" target="_blank"><img src="images/tfn-logo.png" width="50" style="float: right;"></a></p>
+           <p><a href="#more"><img src="images/LearnMore.png" class="img-responsive center-block" width="200"></a></p>
        </div>
 
      </div>
