--- a/index.html
+++ b/index.html
@@ -102,19 +102,9 @@ sm-icon {
  <form method="POST" action="http://www.tfn.org/site/Survey" style="" class="text-center center-block">
  <input type="hidden" name="cons_info_component" id="cons_info_component" value="t" />
  <input type="text" name="cons_first_name" id="cons_first_name" size="20" maxlength="50" value="First name" onFocus="if(this.value == 'First name') {this.value = '';}" onBlur="if (this.value == '') {this.value = 'First name';}" style="margin-bottom: 3px;" class="center-block" />
-       </div>
-       <div class="col-xs-12 col-md-3">
  <input type="text" name="cons_last_name" id="cons_last_name" size="20" maxlength="50" value="Last name" onFocus="if(this.value == 'Last name') {this.value = '';}" onBlur="if (this.value == '') {this.value = 'Last name';}" style="margin-bottom: 3px;" class="center-block" />
-       </div>
-       <div class="col-xs-12 col-md-3 col-md-offset-2">
  <input type="text" name="cons_email" id="cons_email" size="20" maxlength="255" value="Email" onFocus="if(this.value == 'Email') {this.value = '';}" onBlur="if (this.value == '') {this.value = 'Email';}" style="margin-bottom: 3px;" class="center-block" />
-       </div>
-       <div class="col-xs-12 col-md-3">
  <input type="text" name="cons_zip_code" id="cons_zip_code" size="20" maxlength="255" value="Zip" onFocus="if(this.value == 'Zip') {this.value = '';}" onBlur="if (this.value == '') {this.value = 'Zip';}" style="margin-bottom: 3px;" class="center-block" />
-       </div>
-     </div>
-     <div class="row">
-       <div class="col-xs-6 col-xs-offset-3">
  <span class="hidden"><input type="text" name="denySubmit" id="denySubmit" value="" alt="This field is used to prevent form submission by scripts." />&nbsp;Please leave this field empty</span>
  <input type="hidden" name="SURVEY_ID" id="SURVEY_ID" value="4001" />
  <br />
@@ -125,9 +115,9 @@ sm-icon {
          </div>
 
       <div class="row">
-        <div class="col-xs-12">
+        <div class="col-xs-12 col-md-3">
           <p><br />Texas students need classroom materials that offer an accurate portrayal of history and are free of political agendas. Politicians on the board must stop trying to undermine the work of scholars and mainstream historians. They should approve social studies textbooks that are based on sound scholarship.</p>
-           <p><a href="#more"><img src="images/LearnMore.png" class="img-responsive center-block" width="200"></a></p>
+           <p><a href="#more"><img src="images/LearnMore.png" class="img-responsive center-block" width=""></a></p>
        </div>
 
      </div>
