--- a/index.html
+++ b/index.html
@@ -112,15 +112,13 @@ sm-icon {
  </form>
         </div>
       </div>
-         </div>
 
-      <div class="row">
         <div class="col-xs-12 col-md-3">
           <p><br />Texas students need classroom materials that offer an accurate portrayal of history and are free of political agendas. Politicians on the board must stop trying to undermine the work of scholars and mainstream historians. They should approve social studies textbooks that are based on sound scholarship.</p>
            <p><a href="#more"><img src="images/LearnMore.png" class="img-responsive center-block" width=""></a></p>
        </div>
 
-     </div>
+     </div
 
    </div><!-- close of container div -->
 </div><!-- close of section div -->
