--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ sm-icon {
 <div id="fullpage">
   <div class="section" id="section0">
       <div class="container-fluid">
-      <div class="row" style="margin-top: -65px;">
+      <div class="row" style="">
         <a name="homepetition"></a>
         <div class="col-md-12 col-sm-12 col-xs-12">
           <img src="images/TFN-TexasDELETE-logo-dividers.gif" alt="Those who don't know history are destined to delete it" width="100%" class="center-block img-responsive">
@@ -116,7 +116,7 @@ sm-icon {
            <p><a href="#more"><img src="images/LearnMore.png" class="img-responsive center-block" width=""></a></p>
        </div>
 
-     </div
+     </div>
 
    </div><!-- close of container div -->
 </div><!-- close of section div -->
