--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ sm-icon {
 
       <div class="row">
 
-        <div class="col-xs-12 col-md-3 col-md-offset-2">
+        <div class="col-xs-12 col-md-5 col-md-offset-1">
 
  <form method="POST" action="http://www.tfn.org/site/Survey" style="" class="text-center center-block">
  <input type="hidden" name="cons_info_component" id="cons_info_component" value="t" />
@@ -108,11 +108,11 @@ sm-icon {
  <span class="hidden"><input type="text" name="denySubmit" id="denySubmit" value="" alt="This field is used to prevent form submission by scripts." />&nbsp;Please leave this field empty</span>
  <input type="hidden" name="SURVEY_ID" id="SURVEY_ID" value="4001" />
  <br />
- <input type="submit" name="ACTION_SUBMIT_SURVEY_RESPONSE" id="ACTION_SUBMIT_SURVEY_RESPONSE" value="" class="center-block newsletter_signup_button img-responsive" />
+ <input type="submit" name="ACTION_SUBMIT_SURVEY_RESPONSE" id="ACTION_SUBMIT_SURVEY_RESPONSE" value="" class="center-block newsletter_signup_button img-responsive" /><br />
  </form>
         </div>
-        <div class="col-xs-12 col-md-3">
-          <p><br />Texas students need classroom materials that offer an accurate portrayal of history and are free of political agendas. Politicians on the board must stop trying to undermine the work of scholars and mainstream historians. They should approve social studies textbooks that are based on sound scholarship.</p>
+        <div class="col-xs-12 col-md-5">
+          <p>Texas students need classroom materials that offer an accurate portrayal of history and are free of political agendas. Politicians on the board must stop trying to undermine the work of scholars and mainstream historians. They should approve social studies textbooks that are based on sound scholarship.</p>
            <p><a href="#more"><img src="images/LearnMore.png" class="img-responsive center-block" width=""></a></p>
        </div>
 
