--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ sm-icon {
 
       <div class="row">
 
-        <div class="col-xs-12 col-md-5 col-md-offset-1">
+        <div class="col-xs-12 col-md-5 col-md-offset-1 col-lg-5 col-lg-offset-2">
 
  <form method="POST" action="http://www.tfn.org/site/Survey" style="" class="text-center center-block">
  <input type="hidden" name="cons_info_component" id="cons_info_component" value="t" />
@@ -111,7 +111,7 @@ sm-icon {
  <input type="submit" name="ACTION_SUBMIT_SURVEY_RESPONSE" id="ACTION_SUBMIT_SURVEY_RESPONSE" value="" class="center-block newsletter_signup_button img-responsive" /><br />
  </form>
         </div>
-        <div class="col-xs-12 col-md-5">
+        <div class="col-xs-12 col-md-5 col-lg-5">
           <p>Texas students need classroom materials that offer an accurate portrayal of history and are free of political agendas. Politicians on the board must stop trying to undermine the work of scholars and mainstream historians. They should approve social studies textbooks that are based on sound scholarship.</p>
            <p><a href="#more"><img src="images/LearnMore.png" class="img-responsive center-block" width=""></a></p>
        </div>
