--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@ sm-icon {
 
  <form method="POST" action="http://www.tfn.org/site/Survey" style="" class="text-center center-block">
  <input type="hidden" name="cons_info_component" id="cons_info_component" value="t" />
- <input type="text" name="cons_first_name" id="cons_first_name" size="20" maxlength="50" value="First name" onFocus="if(this.value == 'First name') {this.value = '';}" onBlur="if (this.value == '') {this.value = 'First name';}" style="margin-bottom: 3px;" class="center-block" />
- <input type="text" name="cons_last_name" id="cons_last_name" size="20" maxlength="50" value="Last name" onFocus="if(this.value == 'Last name') {this.value = '';}" onBlur="if (this.value == '') {this.value = 'Last name';}" style="margin-bottom: 3px;" class="center-block" />
- <input type="text" name="cons_email" id="cons_email" size="20" maxlength="255" value="Email" onFocus="if(this.value == 'Email') {this.value = '';}" onBlur="if (this.value == '') {this.value = 'Email';}" style="margin-bottom: 3px;" class="center-block" />
+ <input type="text" name="cons_first_name" id="cons_first_name"  maxlength="50" value="First name" onFocus="if(this.value == 'First name') {this.value = '';}" onBlur="if (this.value == '') {this.value = 'First name';}" style="margin-bottom: 3px;" class="center-block" />
+ <input type="text" name="cons_last_name" id="cons_last_name"  maxlength="50" value="Last name" onFocus="if(this.value == 'Last name') {this.value = '';}" onBlur="if (this.value == '') {this.value = 'Last name';}" style="margin-bottom: 3px;" class="center-block" />
+ <input type="text" name="cons_email" id="cons_email"  maxlength="255" value="Email" onFocus="if(this.value == 'Email') {this.value = '';}" onBlur="if (this.value == '') {this.value = 'Email';}" style="margin-bottom: 3px;" class="center-block" />
  <input type="text" name="cons_zip_code" id="cons_zip_code" size="20" maxlength="255" value="Zip" onFocus="if(this.value == 'Zip') {this.value = '';}" onBlur="if (this.value == '') {this.value = 'Zip';}" style="margin-bottom: 3px;" class="center-block" />
  <span class="hidden"><input type="text" name="denySubmit" id="denySubmit" value="" alt="This field is used to prevent form submission by scripts." />&nbsp;Please leave this field empty</span>
  <input type="hidden" name="SURVEY_ID" id="SURVEY_ID" value="4001" />
