--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ sm-icon {
       <div class="container-fluid">
       <div class="row" style="">
         <a name="homepetition"></a>
-        <div class="col-md-12 col-sm-12 col-xs-12">
+        <div class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-lg-10 col-lg-offset-1 col-xs-12">
           <img src="images/TFN-TexasDELETE-logo-dividers.gif" alt="Those who don't know history are destined to delete it" width="100%" class="center-block img-responsive">
         </div>
       </div>
