--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ sm-icon {
       <div class="row" style="">
         <a name="homepetition"></a>
         <div class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-lg-10 col-lg-offset-1 col-xs-12">
-          <img src="images/TFN-TexasDELETE-logo-dividers.gif" alt="Those who don't know history are destined to delete it" width="100%" class="center-block img-responsive">
+          <img src="images/TFN-TexasDELETE-logo-dividers.gif" alt="Those who don't know history are destined to delete it" width="75%" class="center-block img-responsive">
         </div>
       </div>
 
@@ -114,7 +114,7 @@ sm-icon {
         </div>
         <div class="col-xs-12 col-sm-5 col-md-5 col-lg-5">
           <p>Texas students need classroom materials that offer an accurate portrayal of history and are free of political agendas. Politicians on the board must stop trying to undermine the work of scholars and mainstream historians. They should approve social studies textbooks that are based on sound scholarship.</p>
-           <p><a href="#more"><img src="images/LearnMore.png" class="img-responsive center-block" width=""></a></p>
+           <p><a href="#more"><img src="images/LearnMore.png" class="img-responsive center-block" width="155"></a></p>
        </div>
 
      </div>
