--- a/index.html
+++ b/index.html
@@ -78,11 +78,27 @@ sm-icon {
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body style="padding-bottom: 30px;">
+  <body style="padding-top: 15px; padding-bottom: 30px;">
 
 <div id="fullpage">
   <div class="section" id="section0">
       <div class="container-fluid">
+      <div class="row" style="">
+        <div class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-lg-10 col-lg-offset-1 col-xs-12">
+          <a href="https://www.facebook.com/TexasFreedomNetwork" target="_blank">
+              <i class="fa fa-facebook"></i>
+              <img src="images/Facebook-b.gif" alt="Texas Freedom Network on Facebook" class="img-responsive pull-left">
+            </a>
+            <a href="https://twitter.com/tfn" target="_blank">
+              <img src="images/Twitter-b.gif" alt="Texas Freedom Network on Twitter" class="img-responsive pull-left"></a>
+            <a href="http://instagram.com/txfreedomnetwork" target="_blank">
+              <img src="images/Instagram-b.gif" alt="Texas Freedom Network on Instagram" class="img-responsive"></a>
+
+
+            <a href="#" target="_blank"><img src="images/Donate2.gif" alt="Donate to Texas Freedom Network" class="img-responsive pull-right"></a>
+          </ul>
+        </div>
+      </div>
       <div class="row" style="">
         <a name="homepetition"></a>
         <div class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-lg-10 col-lg-offset-1 col-xs-12">
