--- a/index.html
+++ b/index.html
@@ -86,7 +86,6 @@ sm-icon {
       <div class="row" style="">
         <div class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-lg-10 col-lg-offset-1 col-xs-12">
           <a href="https://www.facebook.com/TexasFreedomNetwork" target="_blank">
-              <i class="fa fa-facebook"></i>
               <img src="images/Facebook-b.gif" alt="Texas Freedom Network on Facebook" class="img-responsive pull-left">
             </a>
             <a href="https://twitter.com/tfn" target="_blank">
@@ -101,7 +100,7 @@ sm-icon {
       </div>
       <div class="row" style="">
         <a name="homepetition"></a>
-        <div class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-lg-10 col-lg-offset-1 col-xs-12">
+        <div class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-lg-10 col-lg-offset-1 col-xs-12" style="padding-top: -15px;">
           <img src="images/TFN-TexasDELETE-logo-dividers.gif" alt="Those who don't know history are destined to delete it" width="75%" class="center-block img-responsive">
         </div>
       </div>
