--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ sm-icon {
               <img src="images/Twitter-b.gif" alt="Texas Freedom Network on Twitter" class="img-responsive pull-left"></a>
             <a href="http://instagram.com/txfreedomnetwork" target="_blank">
               <img src="images/Instagram-b.gif" alt="Texas Freedom Network on Instagram" class="img-responsive"></a>
-              <div class="clearfix"></div>
+              <div style="clear: both;"></div>
               <a href="#" target="_blank"><img src="images/Donate2.gif" alt="Donate to Texas Freedom Network" class="img-responsive pull-right" style="display: inline;"></a>
           </ul>
         </div>
