--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ sm-icon {
   <div class="section" id="section0">
       <div class="container-fluid">
       <div class="row" style="">
-        <div class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-lg-10 col-lg-offset-1 col-xs-12">
+        <div class="col-md-2 col-md-offset-1 col-sm-2 col-sm-offset-1 col-lg-2 col-lg-offset-1 col-xs-12 pull-left">
           <a href="https://www.facebook.com/TexasFreedomNetwork" target="_blank">
               <img src="images/Facebook-b.gif" alt="Texas Freedom Network on Facebook" class="img-responsive pull-left">
             </a>
@@ -93,6 +93,7 @@ sm-icon {
             <a href="http://instagram.com/txfreedomnetwork" target="_blank">
               <img src="images/Instagram-b.gif" alt="Texas Freedom Network on Instagram" class="img-responsive"></a>
               <div style="clear: both;"></div>
+              <div class="col-md-2 col-md-offset-6 col-sm-2 col-sm-offset-6 col-lg-2 col-lg-offset-6 col-xs-12 pull-right">
               <a href="#" target="_blank"><img src="images/Donate2.gif" alt="Donate to Texas Freedom Network" class="img-responsive pull-right" style="display: inline;"></a>
           </ul>
         </div>
