--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@ sm-icon {
               <img src="images/Twitter-b.gif" alt="Texas Freedom Network on Twitter" class="img-responsive pull-left"></a>
             <a href="http://instagram.com/txfreedomnetwork" target="_blank">
               <img src="images/Instagram-b.gif" alt="Texas Freedom Network on Instagram" class="img-responsive"></a>
-              <div style="clear: both;"></div>
-              <div class="col-md-2 col-md-offset-6 col-sm-2 col-sm-offset-6 col-lg-2 col-lg-offset-6 col-xs-12 pull-right">
-              <a href="#" target="_blank"><img src="images/Donate2.gif" alt="Donate to Texas Freedom Network" class="img-responsive pull-right" style="display: inline;"></a>
-          </ul>
+        </div>
+        <div style="clear: both;"></div>
+        <div class="col-md-2 col-md-offset-6 col-sm-2 col-sm-offset-6 col-lg-2 col-lg-offset-6 col-xs-12 pull-right">
+              <a href="#" target="_blank"><img src="images/Donate2.gif" alt="Donate to Texas Freedom Network" class="img-responsive pull-right" ></a>
         </div>
       </div>
       <div class="row" style="">
