--- a/index.html
+++ b/index.html
@@ -83,24 +83,23 @@ sm-icon {
 <div id="fullpage">
   <div class="section" id="section0">
       <div class="container-fluid">
-      <div class="row" style="">
-        <div class="col-md-2 col-md-offset-1 col-sm-2 col-sm-offset-1 col-lg-2 col-lg-offset-1 col-xs-12 pull-left">
+      <div class="row" style="margin-top: 10px;">
+        <div class="col-md-2 col-md-offset-2 col-sm-2 col-sm-offset-2 col-lg-2 col-lg-offset-2 col-xs-12 pull-left" >
           <a href="https://www.facebook.com/TexasFreedomNetwork" target="_blank">
               <img src="images/Facebook-b.gif" alt="Texas Freedom Network on Facebook" class="img-responsive pull-left">
             </a>
             <a href="https://twitter.com/tfn" target="_blank">
               <img src="images/Twitter-b.gif" alt="Texas Freedom Network on Twitter" class="img-responsive pull-left"></a>
-            <a href="http://instagram.com/txfreedomnetwork" target="_blank">
-              <img src="images/Instagram-b.gif" alt="Texas Freedom Network on Instagram" class="img-responsive"></a>
+            <a href="http://instagram.com/txfreedomnetwork" target="_blank"><img src="images/Instagram-b.gif" alt="Texas Freedom Network on Instagram" class="img-responsive"></a>
         </div>
-        <div class="col-md-2 col-md-offset-5 col-sm-2 col-sm-offset-5 col-lg-2 col-lg-offset-5 col-xs-12">
+        <div class="col-md-2 col-md-offset-4 col-sm-2 col-sm-offset-4 col-lg-2 col-lg-offset-4 col-xs-12">
               <a href="#" target="_blank"><img src="images/Donate2.gif" alt="Donate to Texas Freedom Network" class="img-responsive" ></a>
         </div>
       </div>
       <div class="row" style="">
         <a name="homepetition"></a>
-        <div class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-lg-10 col-lg-offset-1 col-xs-12" style="padding-top: -15px;">
-          <img src="images/TFN-TexasDELETE-logo-dividers.gif" alt="Those who don't know history are destined to delete it" width="75%" class="center-block img-responsive">
+        <div class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-lg-10 col-lg-offset-1 col-xs-12" style="margin-top: -55px;">
+          <img src="images/TFN-TexasDELETE-logo-dividers.gif" alt="Those who don't know history are destined to delete it" width="80%" class="center-block img-responsive">
         </div>
       </div>
 
