--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ sm-icon {
             <a href="http://instagram.com/txfreedomnetwork" target="_blank"><img src="images/Instagram-b.gif" alt="Texas Freedom Network on Instagram" class="img-responsive"></a>
         </div>
         <div class="col-md-2 col-md-offset-4 col-sm-2 col-sm-offset-4 col-lg-2 col-lg-offset-4 col-xs-12">
-              <a href="#" target="_blank"><img src="images/Donate2.gif" alt="Donate to Texas Freedom Network" class="img-responsive" ></a>
+              <a href="#" target="_blank"><img src="images/Donate2.gif" alt="Donate to Texas Freedom Network" class="img-responsive pull-right" ></a>
         </div>
       </div>
       <div class="row" style="">
