--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ sm-icon {
             </a>
             <a href="https://twitter.com/tfn" target="_blank">
               <img src="images/Twitter-b.gif" alt="Texas Freedom Network on Twitter" class="img-responsive pull-left"></a>
-            <a href="http://instagram.com/txfreedomnetwork" target="_blank"><img src="images/Instagram-b.gif" alt="Texas Freedom Network on Instagram" class="img-responsive"></a>
+            <a href="http://instagram.com/txfreedomnetwork" target="_blank"><img src="images/Instagram-b.gif" alt="Texas Freedom Network on Instagram" class="img-responsive pull-left"></a>
         </div>
         <div class="col-md-2 col-md-offset-4 col-sm-2 col-sm-offset-4 col-lg-2 col-lg-offset-4 col-xs-12">
               <a href="#" target="_blank"><img src="images/Donate2.gif" alt="Donate to Texas Freedom Network" class="img-responsive pull-right" ></a>
