--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@ input {
 sm-icon {
   background-color: #5a5b6c;
 }
+
+.row-pictures .img-responsive {
+  max-width: 33%
+}
+
     </style>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
@@ -84,15 +89,12 @@ sm-icon {
   <div class="section" id="section0">
       <div class="container-fluid">
       <div class="row" style="margin-top: 10px;">
-        <div class="col-md-2 col-md-offset-2 col-sm-2 col-sm-offset-2 col-lg-2 col-lg-offset-2 col-xs-12 pull-left" >
-          <a href="https://www.facebook.com/TexasFreedomNetwork" target="_blank">
+        <div class="col-md-1 col-md-offset-2 col-sm-1 col-sm-offset-2 col-lg-1 col-lg-offset-2 col-xs-1 col-xs-offset-2" >
+            <a href="https://www.facebook.com/TexasFreedomNetwork" target="_blank">
               <img src="images/Facebook-b.gif" alt="Texas Freedom Network on Facebook" class="img-responsive pull-left">
             </a>
-            <a href="https://twitter.com/tfn" target="_blank">
-              <img src="images/Twitter-b.gif" alt="Texas Freedom Network on Twitter" class="img-responsive pull-left"></a>
-            <a href="http://instagram.com/txfreedomnetwork" target="_blank"><img src="images/Instagram-b.gif" alt="Texas Freedom Network on Instagram" class="img-responsive pull-left"></a>
         </div>
-        <div class="col-md-2 col-md-offset-4 col-sm-2 col-sm-offset-4 col-lg-2 col-lg-offset-4 col-xs-12">
+        <div class="col-md-2 col-md-offset-4 col-sm-2 col-sm-offset-4 col-lg-2 col-lg-offset-4 col-xs-4 col-xs-offset-4">
               <a href="#" target="_blank"><img src="images/Donate2.gif" alt="Donate to Texas Freedom Network" class="img-responsive pull-right" ></a>
         </div>
       </div>
