fuck container-fluid

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ sm-icon {
 
 <div id="fullpage">
   <div class="section" id="section0">
-      <div class="container-fluid">
+      <div class="container">
       <div class="row" style="margin-top: 10px;">
         <div class="col-md-1 col-md-offset-2 col-sm-1 col-sm-offset-2 col-lg-1 col-lg-offset-2 col-xs-1 col-xs-offset-2" >
             <a href="https://www.facebook.com/TexasFreedomNetwork" target="_blank">
