--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@ sm-icon {
   max-width: 33%
 }
 
+.navbar {
+  background-color: none;
+  border-color: none!important;
+  background: url('images/TFN-TexasDELETE-logo-dividers.gif') no-repeat center;
+  min-height: 211px;
+}
+
     </style>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
@@ -88,52 +95,53 @@ sm-icon {
 <div id="fullpage">
   <div class="section" id="section0">
       <div class="container">
-      <div class="row" style="margin-top: 10px;">
-        <div class="col-md-1 col-md-offset-2 col-sm-1 col-sm-offset-2 col-lg-1 col-lg-offset-2 col-xs-1 col-xs-offset-2" >
-            <a href="https://www.facebook.com/TexasFreedomNetwork" target="_blank">
-              <img src="images/Facebook-b.gif" alt="Texas Freedom Network on Facebook" class="img-responsive pull-left">
-            </a>
+        <div class="col-md-10 col-md-offset-1">
+          <nav class="navbar" role="navigation">
+            <ul class="nav navbar-nav navbar-left">
+              <li>
+                <a href="https://www.facebook.com/TexasFreedomNetwork" target="_blank">
+                  <img src="images/Facebook-b.gif" alt="Texas Freedom Network on Facebook">
+                </a>
+              </li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+              <li>
+                <a href="#" target="_blank">
+                  <img src="images/Donate2.gif" alt="Donate to Texas Freedom Network">
+                </a>
+              </li>
+            </ul>
+          </nav>
         </div>
-        <div class="col-md-2 col-md-offset-4 col-sm-2 col-sm-offset-4 col-lg-2 col-lg-offset-4 col-xs-4 col-xs-offset-4">
-              <a href="#" target="_blank"><img src="images/Donate2.gif" alt="Donate to Texas Freedom Network" class="img-responsive pull-right" ></a>
-        </div>
-      </div>
-      <div class="row" style="">
-        <a name="homepetition"></a>
-        <div class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-lg-10 col-lg-offset-1 col-xs-12" style="margin-top: -55px;">
-          <img src="images/TFN-TexasDELETE-logo-dividers.gif" alt="Those who don't know history are destined to delete it" width="80%" class="center-block img-responsive">
-        </div>
-      </div>
 
-      <div class="row">
-        <div class="col-xs-12 col-xs-offset-0 col-sm-12 col-sm-offset-0 col-md-6 col-md-offset-3">
-          <h3 class="text-center">Sign the <span style="color: red;">petition</span>.</h3>
+        <div class="row">
+          <div class="col-xs-12 col-xs-offset-0 col-sm-12 col-sm-offset-0 col-md-6 col-md-offset-3">
+            <h3 class="text-center">Sign the <span style="color: red;">petition</span>.</h3>
+          </div>
         </div>
-      </div>
 
-      <div class="row">
+        <div class="row">
 
-        <div class="col-xs-12 col-sm-5 col-sm-offset-1 col-md-5 col-md-offset-1 col-lg-5 col-lg-offset-1">
+          <div class="col-xs-12 col-sm-5 col-sm-offset-1 col-md-5 col-md-offset-1 col-lg-5 col-lg-offset-1">
 
- <form method="POST" action="http://www.tfn.org/site/Survey" style="" class="text-center center-block">
- <input type="hidden" name="cons_info_component" id="cons_info_component" value="t" />
- <input type="text" name="cons_first_name" id="cons_first_name"  maxlength="50" value="First name" onFocus="if(this.value == 'First name') {this.value = '';}" onBlur="if (this.value == '') {this.value = 'First name';}" style="margin-bottom: 3px;" class="center-block" />
- <input type="text" name="cons_last_name" id="cons_last_name"  maxlength="50" value="Last name" onFocus="if(this.value == 'Last name') {this.value = '';}" onBlur="if (this.value == '') {this.value = 'Last name';}" style="margin-bottom: 3px;" class="center-block" />
- <input type="text" name="cons_email" id="cons_email"  maxlength="255" value="Email" onFocus="if(this.value == 'Email') {this.value = '';}" onBlur="if (this.value == '') {this.value = 'Email';}" style="margin-bottom: 3px;" class="center-block" />
- <input type="text" name="cons_zip_code" id="cons_zip_code" size="20" maxlength="255" value="Zip" onFocus="if(this.value == 'Zip') {this.value = '';}" onBlur="if (this.value == '') {this.value = 'Zip';}" style="margin-bottom: 3px;" class="center-block" />
- <span class="hidden"><input type="text" name="denySubmit" id="denySubmit" value="" alt="This field is used to prevent form submission by scripts." />&nbsp;Please leave this field empty</span>
- <input type="hidden" name="SURVEY_ID" id="SURVEY_ID" value="4001" />
- <br />
- <input type="submit" name="ACTION_SUBMIT_SURVEY_RESPONSE" id="ACTION_SUBMIT_SURVEY_RESPONSE" value="" class="center-block newsletter_signup_button img-responsive" /><br />
- </form>
-        </div>
-        <div class="col-xs-12 col-sm-5 col-md-5 col-lg-5">
-          <p>Texas students need classroom materials that offer an accurate portrayal of history and are free of political agendas. Politicians on the board must stop trying to undermine the work of scholars and mainstream historians. They should approve social studies textbooks that are based on sound scholarship.</p>
-           <p><a href="#more"><img src="images/LearnMore.png" class="img-responsive center-block" width="155"></a></p>
+           <form method="POST" action="http://www.tfn.org/site/Survey" style="" class="text-center center-block">
+           <input type="hidden" name="cons_info_component" id="cons_info_component" value="t" />
+           <input type="text" name="cons_first_name" id="cons_first_name"  maxlength="50" value="First name" onFocus="if(this.value == 'First name') {this.value = '';}" onBlur="if (this.value == '') {this.value = 'First name';}" style="margin-bottom: 3px;" class="center-block" />
+           <input type="text" name="cons_last_name" id="cons_last_name"  maxlength="50" value="Last name" onFocus="if(this.value == 'Last name') {this.value = '';}" onBlur="if (this.value == '') {this.value = 'Last name';}" style="margin-bottom: 3px;" class="center-block" />
+           <input type="text" name="cons_email" id="cons_email"  maxlength="255" value="Email" onFocus="if(this.value == 'Email') {this.value = '';}" onBlur="if (this.value == '') {this.value = 'Email';}" style="margin-bottom: 3px;" class="center-block" />
+           <input type="text" name="cons_zip_code" id="cons_zip_code" size="20" maxlength="255" value="Zip" onFocus="if(this.value == 'Zip') {this.value = '';}" onBlur="if (this.value == '') {this.value = 'Zip';}" style="margin-bottom: 3px;" class="center-block" />
+           <span class="hidden"><input type="text" name="denySubmit" id="denySubmit" value="" alt="This field is used to prevent form submission by scripts." />&nbsp;Please leave this field empty</span>
+           <input type="hidden" name="SURVEY_ID" id="SURVEY_ID" value="4001" />
+           <br />
+           <input type="submit" name="ACTION_SUBMIT_SURVEY_RESPONSE" id="ACTION_SUBMIT_SURVEY_RESPONSE" value="" class="center-block newsletter_signup_button img-responsive" /><br />
+           </form>
+          </div>
+          <div class="col-xs-12 col-sm-5 col-md-5 col-lg-5">
+            <p>Texas students need classroom materials that offer an accurate portrayal of history and are free of political agendas. Politicians on the board must stop trying to undermine the work of scholars and mainstream historians. They should approve social studies textbooks that are based on sound scholarship.</p>
+             <p><a href="#more"><img src="images/LearnMore.png" class="img-responsive center-block" width="155"></a></p>
+         </div>
+
        </div>
-
-     </div>
-
    </div><!-- close of container div -->
 </div><!-- close of section div -->
 
