--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ sm-icon {
 <div id="fullpage">
   <div class="section" id="section0">
       <div class="container">
-        <div class="col-md-10 col-md-offset-1">
+        <div class="col-md-10 col-md-offset-1 col-xs-12">
           <nav class="navbar" role="navigation">
             <ul class="nav navbar-nav navbar-left">
               <li>
