--- a/index.html
+++ b/index.html
@@ -72,7 +72,20 @@ sm-icon {
   min-height: 211px;
 }
 
-    </style>
+@media (max-width: 550px) {
+  .donate {
+    width: 75%!important;
+    float: right;
+  }
+}
+
+@media (max-width: 450px) {
+  .donate {
+    width: 60%!important;
+  }
+}
+
+</style>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -95,19 +108,19 @@ sm-icon {
 <div id="fullpage">
   <div class="section" id="section0">
       <div class="container">
-        <div class="col-md-10 col-md-offset-1">
+        <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1">
           <nav class="navbar" role="navigation">
-            <ul class="nav navbar-nav navbar-left">
+            <ul class="nav navbar-nav pull-left">
               <li>
                 <a href="https://www.facebook.com/TexasFreedomNetwork" target="_blank">
                   <img src="images/Facebook-b.gif" alt="Texas Freedom Network on Facebook">
                 </a>
               </li>
             </ul>
-            <ul class="nav navbar-nav navbar-right">
+            <ul class="nav navbar-nav pull-right">
               <li>
                 <a href="#" target="_blank">
-                  <img src="images/Donate2.gif" alt="Donate to Texas Freedom Network">
+                  <img src="images/Donate2.gif" alt="Donate to Texas Freedom Network" class="donate">
                 </a>
               </li>
             </ul>
