--- a/index.html
+++ b/index.html
@@ -116,6 +116,11 @@ sm-icon {
                   <img src="images/Facebook-b.gif" alt="Texas Freedom Network on Facebook">
                 </a>
               </li>
+              <li><a href="https://twitter.com/tfn" target="_blank">
+              <img src="images/Twitter-b.gif" alt="Texas Freedom Network on Twitter"></a>
+              </li>
+              <li><a href="http://instagram.com/txfreedomnetwork" target="_blank"><img src="images/Instagram-b.gif" alt="Texas Freedom Network on Instagram" ></a>
+              </li>
             </ul>
             <ul class="nav navbar-nav pull-right">
               <li>
