--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     width: 100%;
     height: 100%;
 }
-#section0 {
+#section0, #section2 {
   width: 100%;
 }
 #section1 {
@@ -109,7 +109,7 @@ sm-icon {
   <div class="section" id="section0">
       <div class="container">
         <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1">
-          <nav class="navbar" role="navigation">
+          <nav class="navbar hidden-xs" role="navigation">
             <ul class="nav navbar-nav pull-left">
               <li>
                 <a href="https://www.facebook.com/TexasFreedomNetwork" target="_blank">
@@ -194,23 +194,47 @@ But we can't do this without you and other Texans who believe politics don’t b
    </div><!-- Closing for container div -->
  </div><!-- Closing for section1 id -->
 
-</div><!-- Closing for fullPage id -->
-<!-- <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
+ <div class="section" id="section2"><a name="background"></a>
   <div class="container">
-    <div class="pull-right">
 
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <h2 class="text-center" style="text-transform: uppercase;">Additional <span style="color: red;">background</span>  reading.</h2>
+      </div>
     </div>
-  </div>
-</nav> -->
 
-      <script>
-  $(document).ready(function() {
-      $('#fullpage').fullpage({
-      scrollingSpeed: 300,
-      scrollOverflow: true,
-    });
-  });
-  </script>
+    <div class="row">
+        <div class="col-md-4 col-md-offset-2">
+<p><br />The State Board of Education will adopt new social studies textbooks this year under what is called Proclamation 2015. The new social studies textbooks must cover curriculum standards, the Texas Essential Knowledge and Skills (TEKS), adopted by the State Board of Education in 2010.</p>
+
+        </div>
+        <div class="col-md-4">
+<p>
+  <ul>
+    <li>Textbook adoption timeline [TFN pdf]</li>
+    <li>Fact Sheet: How Politics Shaped the Texas Social Studies Textbook Adoption in 2002 [TFN pdf]</li>
+    <li>Social Studies TEKS [http://ritter.tea.state.tx.us/rules/tac/chapter113/index.html]</li>
+    <li>Economics TEKS [http://ritter.tea.state.tx.us/rules/tac/chapter118/index.html]</li>
+    <li>Proclamation 2015 key documents [http://www.tea.state.tx.us/index2.aspx?id=25769804190]</li>
+    <li>Thomas B. Fordham Institute: Review of U.S. History standards from Texas and other states [TFN pdf]</li>
+    <li>Texas Higher Education Coordinating Board’s Social Studies Faculty Collaborative: Review of the U.S. History standards in Texas [TFN pdf]</li>
+  </ul>
+</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4 col-md-offset-4">
+<p><a href="#homepetition"><img src="images/sign-petition.png" class="img-responsive center-block" width="200"></a>
+<a href="http://www.tfn.org/" target="_blank"><img src="images/tfn-logo.png" width="50" style="float: right;"></a>
+</p>
+        </div><!-- Closing for column div -->
+     </div><!-- Closing for row div -->
+   </div><!-- Closing for container div -->
+ </div><!-- Closing for section2 id -->
+
+</div><!-- Closing for fullPage id -->
+
+
 
   </body>
 </html>
