--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@ sm-icon {
 .navbar {
   background-color: none;
   border-color: none!important;
-  background: url('images/TFN-TexasDELETE-logo-dividers.gif') no-repeat center;
   min-height: 211px;
 }
 
@@ -110,6 +109,7 @@ sm-icon {
       <div class="container">
         <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1">
           <nav class="navbar hidden-xs" role="navigation">
+            <div style="background: url('images/TFN-TexasDELETE-logo-dividers.gif') no-repeat center;" class="hidden-xs">
             <ul class="nav navbar-nav pull-left">
               <li>
                 <a href="https://www.facebook.com/TexasFreedomNetwork" target="_blank">
@@ -129,6 +129,7 @@ sm-icon {
                 </a>
               </li>
             </ul>
+          </div>
           </nav>
         </div>
 
