--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ sm-icon {
   <div class="section" id="section0">
       <div class="container">
         <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1">
-          <nav class="navbar hidden-xs" role="navigation">
+          <nav class="navbar" role="navigation">
             <div style="background: url('images/TFN-TexasDELETE-logo-dividers.gif') no-repeat center;" class="hidden-xs">
             <ul class="nav navbar-nav pull-left">
               <li>
