media query navbar

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@ sm-icon {
   background-color: none;
   border-color: none!important;
   min-height: 211px;
+  background: url('images/TFN-TexasDELETE-logo-dividers.gif') no-repeat center;
 }
 
 @media (max-width: 550px) {
@@ -81,6 +82,9 @@ sm-icon {
 @media (max-width: 450px) {
   .donate {
     width: 60%!important;
+  }
+  .navbar {
+    background: url('images/Texas-delete.png') no-repeat center;
   }
 }
 
@@ -109,7 +113,6 @@ sm-icon {
       <div class="container">
         <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1">
           <nav class="navbar" role="navigation">
-            <div style="background: url('images/TFN-TexasDELETE-logo-dividers.gif') no-repeat center;" class="hidden-xs">
             <ul class="nav navbar-nav pull-left">
               <li>
                 <a href="https://www.facebook.com/TexasFreedomNetwork" target="_blank">
@@ -129,7 +132,6 @@ sm-icon {
                 </a>
               </li>
             </ul>
-          </div>
           </nav>
         </div>
 
