--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ sm-icon {
     width: 60%!important;
   }
   .navbar {
-    background: url('images/Texas-delete.png') no-repeat center;
+    background: url('images/Texas-delete-xs.png') no-repeat center;
   }
 }
 
