--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@ sm-icon {
   }
   .navbar {
     background: url('images/Texas-delete-xs.png') no-repeat center;
+    background-size: 150px;
   }
 }
 
