--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@ sm-icon {
     background: url('images/Texas-delete-xs.png') no-repeat center;
     background-size: 150px;
   }
+  .xs-sm {
+    width: 20px;
+  }
 }
 
 </style>
@@ -123,7 +126,7 @@ sm-icon {
               <li><a href="https://twitter.com/tfn" target="_blank">
               <img src="images/Twitter-b.gif" alt="Texas Freedom Network on Twitter"></a>
               </li>
-              <li><a href="http://instagram.com/txfreedomnetwork" target="_blank"><img src="images/Instagram-b.gif" alt="Texas Freedom Network on Instagram" ></a>
+              <li><a href="http://instagram.com/txfreedomnetwork" target="_blank"><img class="xs-sm" src="images/Instagram-b.gif" alt="Texas Freedom Network on Instagram" ></a>
               </li>
             </ul>
             <ul class="nav navbar-nav pull-right">
