--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@ sm-icon {
             <ul class="nav navbar-nav pull-left">
               <li>
                 <a href="https://www.facebook.com/TexasFreedomNetwork" target="_blank">
-                  <img src="images/Facebook-b.gif" alt="Texas Freedom Network on Facebook">
+                  <img src="images/Facebook-b.gif" class="xs-sm" alt="Texas Freedom Network on Facebook">
                 </a>
               </li>
               <li><a href="https://twitter.com/tfn" target="_blank">
-              <img src="images/Twitter-b.gif" alt="Texas Freedom Network on Twitter"></a>
+              <img src="images/Twitter-b.gif" class="xs-sm" alt="Texas Freedom Network on Twitter"></a>
               </li>
               <li><a href="http://instagram.com/txfreedomnetwork" target="_blank"><img class="xs-sm" src="images/Instagram-b.gif" alt="Texas Freedom Network on Instagram" ></a>
               </li>
