--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ sm-icon {
       <div class="container">
         <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1">
           <nav class="navbar" role="navigation">
-            <ul class="nav navbar-nav pull-left">
+            <ul class="nav navbar-nav pull-left btn-group">
               <li>
                 <a href="https://www.facebook.com/TexasFreedomNetwork" target="_blank">
                   <img src="images/Facebook-b.gif" class="xs-sm" alt="Texas Freedom Network on Facebook">
