--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@ sm-icon {
 <div id="fullpage">
   <div class="section" id="section0">
       <div class="container">
-        <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1">
+        <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1">
           <nav class="navbar" role="navigation">
-            <ul class="nav navbar-nav pull-left inline">
+            <ul class="nav navbar-nav pull-left">
               <li>
                 <a href="https://www.facebook.com/TexasFreedomNetwork" target="_blank">
                   <img src="images/Facebook-b.gif" class="xs-sm" alt="Texas Freedom Network on Facebook">
