--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@ sm-icon {
     background: url('images/Texas-delete-xs.png') no-repeat center;
     background-size: 150px;
   }
+  .sm-float {
+    float: left;
+  }
   .xs-sm {
     width: 20px;
   }
@@ -115,7 +118,7 @@ sm-icon {
 <div id="fullpage">
   <div class="section" id="section0">
       <div class="container">
-        <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1">
+        <div class="col-xs-12 col-md-10 col-md-offset-1">
           <nav class="navbar" role="navigation">
             <ul class="nav navbar-nav pull-left">
               <li>
