--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ sm-icon {
     background: url('images/Texas-delete-xs.png') no-repeat center;
     background-size: 150px;
   }
-  .sm-float {
+  .navbar-nav {
     float: left;
   }
   .xs-sm {
@@ -120,7 +120,7 @@ sm-icon {
       <div class="container">
         <div class="col-xs-12 col-md-10 col-md-offset-1">
           <nav class="navbar" role="navigation">
-            <ul class="nav navbar-nav pull-left">
+            <ul class="nav navbar-nav pull-left sm-float">
               <li>
                 <a href="https://www.facebook.com/TexasFreedomNetwork" target="_blank">
                   <img src="images/Facebook-b.gif" class="xs-sm" alt="Texas Freedom Network on Facebook">
