Revert 2e5e6bc..571ee8e
This rolls back to commit 2e5e6bc7358e57b1adadccac0bde66e905f00c52.

--- a/index.html
+++ b/index.html
@@ -85,10 +85,6 @@ sm-icon {
   }
   .navbar {
     background: url('images/Texas-delete-xs.png') no-repeat center;
-    background-size: 150px;
-  }
-  .xs-sm {
-    width: 20px;
   }
 }
 
@@ -115,18 +111,18 @@ sm-icon {
 <div id="fullpage">
   <div class="section" id="section0">
       <div class="container">
-        <div class="col-xs-12 col-md-10 col-md-offset-1">
+        <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1">
           <nav class="navbar" role="navigation">
             <ul class="nav navbar-nav pull-left">
               <li>
                 <a href="https://www.facebook.com/TexasFreedomNetwork" target="_blank">
-                  <img src="images/Facebook-b.gif" class="xs-sm" alt="Texas Freedom Network on Facebook">
+                  <img src="images/Facebook-b.gif" alt="Texas Freedom Network on Facebook">
                 </a>
               </li>
               <li><a href="https://twitter.com/tfn" target="_blank">
-              <img src="images/Twitter-b.gif" class="xs-sm" alt="Texas Freedom Network on Twitter"></a>
+              <img src="images/Twitter-b.gif" alt="Texas Freedom Network on Twitter"></a>
               </li>
-              <li><a href="http://instagram.com/txfreedomnetwork" target="_blank"><img class="xs-sm" src="images/Instagram-b.gif" alt="Texas Freedom Network on Instagram" ></a>
+              <li><a href="http://instagram.com/txfreedomnetwork" target="_blank"><img src="images/Instagram-b.gif" alt="Texas Freedom Network on Instagram" ></a>
               </li>
             </ul>
             <ul class="nav navbar-nav pull-right">
