--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@ sm-icon {
   .navbar {
     background: url('images/Texas-delete-xs.png') no-repeat center;
   }
+  .navbar-nav>li {
+    margin: 2px;
+  }
 }
 
 </style>
