--- a/index.html
+++ b/index.html
@@ -85,9 +85,13 @@ sm-icon {
   }
   .navbar {
     background: url('images/Texas-delete-xs.png') no-repeat center;
+    background-size: 150px;
   }
   .navbar-nav>li {
     margin: 2px;
+  }
+  .socmed {
+    width: 50% !important;
   }
 }
 
