--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ sm-icon {
     margin: 2px;
   }
   .socmed {
-    width: 50% !important;
+    float: right;
   }
 }
 
@@ -120,16 +120,16 @@ sm-icon {
       <div class="container">
         <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1">
           <nav class="navbar" role="navigation">
-            <ul class="nav navbar-nav pull-left">
+            <ul class="nav navbar-nav pull-left socmed">
               <li>
                 <a href="https://www.facebook.com/TexasFreedomNetwork" target="_blank">
-                  <img src="images/Facebook-b.gif" class="socmed" alt="Texas Freedom Network on Facebook">
+                  <img src="images/Facebook-b.gif"  alt="Texas Freedom Network on Facebook">
                 </a>
               </li>
               <li><a href="https://twitter.com/tfn" target="_blank">
-              <img src="images/Twitter-b.gif" class="socmed"  alt="Texas Freedom Network on Twitter"></a>
+              <img src="images/Twitter-b.gif"   alt="Texas Freedom Network on Twitter"></a>
               </li>
-              <li><a href="http://instagram.com/txfreedomnetwork" target="_blank"><img src="images/Instagram-b.gif" class="socmed"  alt="Texas Freedom Network on Instagram" ></a>
+              <li><a href="http://instagram.com/txfreedomnetwork" target="_blank"><img src="images/Instagram-b.gif" alt="Texas Freedom Network on Instagram" ></a>
               </li>
             </ul>
             <ul class="nav navbar-nav pull-right">
