--- a/index.html
+++ b/index.html
@@ -87,11 +87,8 @@ sm-icon {
     background: url('images/Texas-delete-xs.png') no-repeat center;
     background-size: 150px;
   }
-  .navbar-nav>li {
-    margin: 2px;
-  }
   .socmed {
-    float: right !important;
+    margin-right: 2px !important;
   }
 }
 
