--- a/index.html
+++ b/index.html
@@ -87,9 +87,7 @@ sm-icon {
     background: url('images/Texas-delete-xs.png') no-repeat center;
     background-size: 150px;
   }
-  .socmed {
-    margin-right: 2px !important;
-  }
+
 }
 
 </style>
@@ -117,7 +115,7 @@ sm-icon {
       <div class="container">
         <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1">
           <nav class="navbar" role="navigation">
-            <ul class="nav navbar-nav pull-left socmed">
+            <ul class="nav navbar-nav pull-left">
               <li>
                 <a href="https://www.facebook.com/TexasFreedomNetwork" target="_blank">
                   <img src="images/Facebook-b.gif"  alt="Texas Freedom Network on Facebook">
