--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ sm-icon {
         <div class="row">
 
           <div class="col-xs-12 col-sm-5 col-sm-offset-1 col-md-5 col-md-offset-1 col-lg-5 col-lg-offset-1">
-
+              <br />
            <form method="POST" action="http://www.tfn.org/site/Survey" style="" class="text-center center-block">
            <input type="hidden" name="cons_info_component" id="cons_info_component" value="t" />
            <input type="text" name="cons_first_name" id="cons_first_name"  maxlength="50" value="First name" onFocus="if(this.value == 'First name') {this.value = '';}" onBlur="if (this.value == '') {this.value = 'First name';}" style="margin-bottom: 3px;" class="center-block" />
@@ -161,7 +161,8 @@ sm-icon {
           </div>
           <div class="col-xs-12 col-sm-5 col-md-5 col-lg-5">
             <p>Texas students need classroom materials that offer an accurate portrayal of history and are free of political agendas. Politicians on the board must stop trying to undermine the work of scholars and mainstream historians. They should approve social studies textbooks that are based on sound scholarship.</p>
-             <p><a href="#more"><img src="images/LearnMore.png" class="img-responsive center-block" width="155"></a></p>
+             <p><a href="#more"><img src="images/LearnMore.png" class="img-responsive center-block" width="155" style="margin-top: 20px;"></a>
+             <a href="http://www.tfn.org/" target="_blank"><img src="images/tfn-logo-transparent.png" width="50" style="position: fixed; bottom: 5px; right: 5px;"></a></p>
          </div>
 
        </div>
@@ -192,7 +193,6 @@ The process of approving the new books is already underway and will conclude wit
 <p>
 But we can't do this without you and other Texans who believe politics don’t belong in the classroom.</p>
 <p><br /><a href="#homepetition"><img src="images/sign-petition.png" class="img-responsive center-block" width="200"></a>
-<a href="http://www.tfn.org/" target="_blank"><img src="images/tfn-logo.png" width="50" style="float: right;"></a>
 </p>
         </div><!-- Closing for column div -->
      </div><!-- Closing for row div -->
@@ -230,7 +230,6 @@ But we can't do this without you and other Texans who believe politics don’t b
       <div class="row">
         <div class="col-md-4 col-md-offset-4">
 <p><a href="#homepetition"><img src="images/sign-petition.png" class="img-responsive center-block" width="200"></a>
-<a href="http://www.tfn.org/" target="_blank"><img src="images/tfn-logo.png" width="50" style="float: right;"></a>
 </p>
         </div><!-- Closing for column div -->
      </div><!-- Closing for row div -->
